gl51-master/src/test/deca/context/invalid/testObject_rule2_5bis.deca
// Description
// identificteur deja definie dans la superclass mais n'est pas de type field

class A {
    void x() {}
}

class B extends A {
    protected int x;
}
//passed
